--- a/frontend/index.html
+++ b/frontend/index.html
@@ -205,31 +205,43 @@ micBtn.onclick=()=>{
 // =======================
 // Stimme & sprechen (Edge-kompatibel)
 // =======================
-let maleVoice = null;
 
-// Stimmen laden und auf Änderungen reagieren
+let maleVoice = null;
+let greetingQueue = [];
+
+// Stimmen laden
 function loadVoices(){
   const voices = speechSynthesis.getVoices();
-  maleVoice = voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name)) ||
-              voices.find(v=>v.lang.startsWith("de")) ||
-              voices[0]||null;
+  if(voices.length > 0){
+    maleVoice = voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name)) ||
+                voices.find(v=>v.lang.startsWith("de")) ||
+                voices[0];
+    // Alle wartenden Texte sprechen
+    greetingQueue.forEach(text=> speak(text));
+    greetingQueue = [];
+  }
 }
 loadVoices();
 speechSynthesis.onvoiceschanged = loadVoices;
 
+// Funktion zum Sprechen
 function speak(text){
-  if(!text || !maleVoice) return;
+  if(!text) return;
+  if(!maleVoice){
+    // Stimme noch nicht verfügbar → in Queue speichern
+    greetingQueue.push(text);
+    return;
+  }
   const utter = new SpeechSynthesisUtterance(text);
-  utter.lang="de-DE";
-  utter.rate=0.95;
-  utter.pitch=0.6;
+  utter.lang = 'de-DE';
+  utter.rate = 0.95;
+  utter.pitch = 0.6;
   utter.voice = maleVoice;
   utter.volume = 0.6;
-  utter.onstart=()=>{ talking=true; };
-  utter.onend=()=>{ talking=false; };
+  utter.onstart = ()=>{ talking = true; };
+  utter.onend = ()=>{ talking = false; };
   speechSynthesis.speak(utter);
 }
-
 // =======================
 // Begrüßung bei erster Berührung (Edge-kompatibel)
 // =======================
